/*
                                ChangeLog

*%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*
*       Part of:        SExtractor
*
*       Author:         E. BERTIN (IAP)
*
*       Contents:       log of changes made to the SExtractor source
*
*       Last modify:    27/09/2005
*
*%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

Who     When            Where(mostly)   What

EB      03/07/97        clean.c         Make removal of LSB sources optional.
                        scanimage()     Idem.
                        clean.h
                        types.h         Move prototypes from types.h to clean.h

EB      23/07/97        -               Blanking of detections. Major update.
                                        outobj2 components are now handled
                                        through the obj2 pointer.

EB      31/07/97        photom.c        MAGERR_APER bug introduced during the
                                        add of blanking fixed.

EB      01/08/97        LDACTools       Upgraded from the EIS version.

EB      04/08/97        -               Added handling of external FLAG-maps.
                        read_prefs()    Upgraded from the WeightWatcher code.
                        newfield()      Changed slightly the frame description
                                        display.
EB      13/08/97        filterback()    Fixed bug with even BACK_FILTERSIZE
                        localback()     Fixed bug with LOCAL backgrounds for
                                        BLANKed detections.

EB      27/08/97        -               Added handling of external WEIGHT-maps.

EB      02/09/97        makeback()      Added display of currently processed
                                        line.
                        sexheadsc.h
                        catout.c        New ASCII_SKYCAT catalog format.
