@@ -1,4 +1,4 @@
-.TH SEXTRACTOR "1" "September 2005" "SWarp 2.4.3" "User Commands"
+.TH SEXTRACTOR "1" "October 2005" "SWarp 2.4.4" "User Commands"
 .SH NAME
 sex \- extract a source catalog from an astronomical FITS image
 .SH SYNOPSIS
