@@ -9,7 +9,7 @@
 *
 *	Contents:	Keywords for the configuration file.
 *
-*	Last modify:	18/07/2005
+*	Last modify:	19/10/2005
 *
 *%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 */
@@ -151,13 +151,16 @@ char *default_prefs[] =
 "#------------------------------- Extraction ----------------------------------",
 " ",
 "DETECT_TYPE      CCD            # \"CCD\" or \"PHOTO\"",
-"FLAG_IMAGE       flag.fits      # filename for an input FLAG-image",
 "DETECT_MINAREA   5              # minimum number of pixels above threshold",
+"*THRESH_TYPE      RELATIVE       # threshold type: \"RELATIVE\" (in sigmas)",
+"*                                # or \"ABSOLUTE\" (in ADUs)",
 "DETECT_THRESH    1.5            # <sigmas> or <threshold>,<ZP> in mag.arcsec-2",
 "ANALYSIS_THRESH  1.5            # <sigmas> or <threshold>,<ZP> in mag.arcsec-2",
 " ",
 "FILTER           Y              # apply filter for detection (\"Y\" or \"N\")?",
 "FILTER_NAME      default.conv   # name of the file containing the filter",
+"*FILTER_THRESH                   # Threshold[s] for retina filtering",
+
 " ",
 "DEBLEND_NTHRESH  32             # Number of deblending sub-thresholds",
 "DEBLEND_MINCONT  0.005          # Minimum contrast parameter for deblending",
@@ -168,12 +171,29 @@ char *default_prefs[] =
 "MASK_TYPE        CORRECT        # type of detection MASKing: can be one of",
 "                                # \"NONE\", \"BLANK\" or \"CORRECT\"",
 " ",
+"*#-------------------------------- WEIGHTing ----------------------------------",
+"*",
+"*WEIGHT_TYPE      NONE           # type of WEIGHTing: \"NONE\", \"BACKGROUND\",",
+"*                                # \"MAP_RMS\", \"MAP_VAR\" or \"MAP_WEIGHT\"",
+"*WEIGHT_IMAGE     weight.fits    # weight-map filename",
+"*WEIGHT_GAIN      Y              # modulate gain (E/ADU) with weights? (Y/N)",
+"*WEIGHT_THRESH                   # weight threshold[s] for bad pixels",
+"*",
+"*#-------------------------------- FLAGging -----------------------------------",
+"*",
+"*FLAG_IMAGE       flag.fits      # filename for an input FLAG-image",
+"*FLAG_TYPE        OR             # flag pixel combination: \"OR\", \"AND\",",
+"*                                # \"MIN\", \"MAX\", \"MOST\"",
+"*",
 "#------------------------------ Photometry -----------------------------------",
 " ",
 "PHOT_APERTURES   5              # MAG_APER aperture diameter(s) in pixels",
 "PHOT_AUTOPARAMS  2.5, 3.5       # MAG_AUTO parameters: <Kron_fact>,<min_radius>",
 "PHOT_PETROPARAMS 2.0, 3.5       # MAG_PETRO parameters: <Petrosian_fact>,",
 "                                # <min_radius>",
+"*PHOT_AUTOAPERS   0.0,0.0        # <estimation>,<measurement> minimum apertures",
+"*                                # for MAG_AUTO and MAG_PETRO",
+"*PHOT_FLUXFRAC    0.5            # flux fraction[s] used for FLUX_RADIUS",
 " ",
 "SATUR_LEVEL      50000.0        # level (in ADUs) at which arises saturation",
 " ",
@@ -189,11 +209,15 @@ char *default_prefs[] =
 " ",
 "#------------------------------ Background -----------------------------------",
 " ",
+"*BACK_TYPE        AUTO           # \"AUTO\" or \"MANUAL\"",
+"*BACK_VALUE       0.0            # Default background value in MANUAL mode",
 "BACK_SIZE        64             # Background mesh: <size> or <width>,<height>",
 "BACK_FILTERSIZE  3              # Background filter: <size> or <width>,<height>",
 " ",
 "BACKPHOTO_TYPE   GLOBAL         # can be \"GLOBAL\" or \"LOCAL\"",
-"*BACKPHOTO_THICK 24              # thickness of the background LOCAL annulus",
+"*BACKPHOTO_THICK  24             # thickness of the background LOCAL annulus",
+"*BACK_FILTTHRESH  0.0            # Threshold above which the background-",
+"*                                # map filter operates",
 " ",
 "#------------------------------ Check Image ----------------------------------",
 " ",
@@ -209,39 +233,33 @@ char *default_prefs[] =
 "MEMORY_PIXSTACK  300000         # number of pixels in stack",
 "MEMORY_BUFSIZE   1024           # number of lines in buffer",
 " ",
+"*#------------------------------- ASSOCiation ---------------------------------",
+"*",
+"*ASSOC_NAME       sky.list       # name of the ASCII file to ASSOCiate",
+"*ASSOC_DATA       2,3,4          # columns of the data to replicate (0=all)",
+"*ASSOC_PARAMS     2,3,4          # columns of xpos,ypos[,mag]",
+"*ASSOC_RADIUS     2.0            # cross-matching radius (pixels)",
+"*ASSOC_TYPE       MAG_SUM        # ASSOCiation method: \"FIRST\", \"NEAREST\",",
+"*                                # \"MEAN\", \"MAG_MEAN\", \"SUM\", \"MAG_SUM\",",
+"*                                #\"MIN\" or \"MAX\"",
+"*ASSOCSELEC_TYPE  MATCHED        # ASSOC selection type: \"ALL\", \"MATCHED\"",
+"*                                # or \"-MATCHED\"",
+"*",
 "#----------------------------- Miscellaneous ---------------------------------",
 " ",
 "VERBOSE_TYPE     NORMAL         # can be \"QUIET\", \"NORMAL\" or \"FULL\"",
-"*ASSOC_DATA           2,3,4",
-"*ASSOC_NAME           sky.list",
-"*ASSOC_PARAMS         2,3,4",
-"*ASSOC_RADIUS         2.0",
-"*ASSOC_TYPE           MAG_SUM",
-"*ASSOCSELEC_TYPE      MATCHED",
-"*BACK_FILTTHRESH      0.0",
-"*BACK_TYPE            AUTO",
-"*BACK_VALUE           0.0",
-"*CHECKIMAGE_NAME      check.fits",
-"*CHECKIMAGE_TYPE      NONE",
-"*FILTER_THRESH        ",
-"*FITS_UNSIGNED        N",
-"*FLAG_IMAGE           flag.fits",
-"*FLAG_TYPE            OR",
-"*INTERP_MAXXLAG       16",
-"*INTERP_MAXYLAG       16",
-"*INTERP_TYPE          ALL",
-"*MAMA_CORFLEX         3.3e-5",
-"*PHOT_AUTOAPERS       0.0,0.0",
-"*PHOT_FLUXFRAC        0.5",
-"*PSF_NAME             default.psf",
-"*PSF_NMAX             11",
-"*PSFDISPLAY_TYPE      SPLIT",
-"*SOM_NAME             default.som",
-"*THRESH_TYPE          RELATIVE",
-"*WEIGHT_GAIN          Y",
-"*WEIGHT_IMAGE         weight.fits",
-"*WEIGHT_TYPE          NONE",
-"*WEIGHT_THRESH        ",
+"*",
+"*#----------------------------------- Other -----------------------------------",
+"*",
+"*FITS_UNSIGNED    N",
+"*INTERP_MAXXLAG   16",
+"*INTERP_MAXYLAG   16",
+"*INTERP_TYPE      ALL",
+"*MAMA_CORFLEX     3.3e-5",
+"*PSF_NAME         default.psf",
+"*PSF_NMAX         11",
+"*PSFDISPLAY_TYPE  SPLIT",
+"*SOM_NAME         default.som",
 ""
  };
 
